更新とシェア

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -23,7 +23,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceLarge"
-    android:id="@+id/time"
+    android:id="@+id/output_time"
+    android:text=""
     android:layout_gravity="center_horizontal"
     android:textColor="@color/isuca"
     android:textStyle="bold"
