--- a/res/menu/main_activity_actions.xml
+++ b/res/menu/main_activity_actions.xml
@@ -10,4 +10,8 @@
     android:icon="@drawable/ic_action_refresh"
     android:title="@string/action_refresh"
     android:showAsAction="ifRoom" />
+
+  <item android:id="@+id/change_channel"
+    android:title="@string/change_channel"
+    android:showAsAction="ifRoom" />
 </menu>
